--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.2",
     "react": "^18.2.0",
@@ -20,6 +21,8 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
